# temporal-mcp

./: .gitignore  README.md  pyproject.toml  server.json
src/temporal_mcp/: __init__.py  __main__.py  clock.py  server.py
tests/: test_clock.py
workers/: .dev.vars.example  package-lock.json  package.json  tsconfig.json  wrangler.toml
workers/migrations/: 0001_init.sql  0002_oauth.sql
workers/src/: clock.ts  index.ts  mcp.ts  oauth-endpoints.ts  oauth.ts
workers/test/: clock.test.ts
