[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "temporal-mcp"
version = "0.1.0"
description = "Temporal grounding for LLM agents: per-thread elapsed time, day rollover, and resume detection as an MCP server."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Garret Sutherland", email = "gsutherland@mirrorethic.com" },
]
requires-python = ">=3.9"
keywords = ["mcp", "llm", "temporal", "time", "agent", "claude", "anthropic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp>=1.0",
    "platformdirs>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
temporal-mcp = "temporal_mcp.server:run"

[project.urls]
Homepage = "https://github.com/MirrorEthic/temporal-mcp"
Issues = "https://github.com/MirrorEthic/temporal-mcp/issues"
Repository = "https://github.com/MirrorEthic/temporal-mcp"

[tool.hatch.build.targets.wheel]
packages = ["src/temporal_mcp"]
